// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should pass a selected value to the onChange handler 1`] = `
<div
  className="dropdown"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <span
    className="dropdown__label"
  >
    label
  </span>
  <div
    className="dropdown__wrapper"
  >
    <select
      className="dropdown__select"
      name="name"
      onChange={[MockFunction]}
    >
      <option
        key="0"
        value="one"
      >
        One
      </option>
      <option
        key="1"
        value="two"
      >
        Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Dropdown should render correctly 1`] = `
<div
  className="dropdown"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <span
    className="dropdown__label"
  >
    label
  </span>
  <div
    className="dropdown__wrapper"
  >
    <select
      className="dropdown__select"
      name="name"
      onChange={[Function]}
    >
      <option
        key="0"
        value="one"
      >
        One
      </option>
      <option
        key="1"
        value="two"
      >
        Two
      </option>
    </select>
  </div>
</div>
`;
